# llm-tester

./: LICENSE  README.md  config.toml  config.toml~  evaluate.py  evaluate_table.py  generate_composites.py  generate_tables.py  llm_clients.py  plot_scores.py  pyproject.toml
output/png_10_35/: score-gemini-2-0-flash.json  score-gemini-3-flash-preview.json  validation.json
